** MovieJukebox Release note
***************************************************************

MovieJukebox 1.0.17 beta
------------------------
  - Enhancement  #311 A playlist is now generated for all movies (even if there's only one file), and it is customizable via playlist.xsl
  - Enhancement  #411 Plugin for Dutch movie database (www.moviemeter.nl)
  - Fixed defect #636 (Regression) Check for file-based subtitles
  - Fixed defect #644 Directory fanart not found on POSIX systems
  - Fixed defect #645 IMDB plots with embedded HTML tags are now parsed correctly
  - Fixed defect #649 Manually decode some Cp1251 values that Kinopoisk uses &#xxx; entities for
  - Fixed defect #662 FilmDeltaSEPlugin can't handle "illegal HTML characters"
  - Fixed defect #666 Can't connect to imdb behind authenticated proxy
  - Fixed defect #667 Can't download image behind authenticated proxy
  - Fixed defect #668 Can't connect to TheTVDB behind authenticated proxy
  - Fixed defect #670 BD structure in excluded directory causes exception
  - Enhancement  #671 Option to create posters for set masters
  - Fixed defect #673 Sets no longer appear on categories.html page
  - Enhancement  #675 (Default skin only for now) Play all files in a set by highlighting the set and pressing "play" button on remote
  - Fixed defect #676 MovieMeterPlugin: problem when no movie duration is available
  - Fixed defect #677 Exception in MovieMeterPlugin
  - Fixed defect #678 Get Season 0 information from TheTVDB.com
  - Enhancement  #683 Ability to resize episode screenshot
  - Fixed defect #687 Label season 0 as "Specials"
  - Fixed defect #688 index_sd.htm not transfered to output dir
  - Fixed defect #691 Episode images vanish in the skin after new episodes are added
  - Fixed defect #692 Null pointer exception when episode images are unavailable
  - Enhancement  #697 MovieMeterPlugin: download fanart based on IMDB id returned from moviemeter.nl\
  - Fixed defect #696 Trailer link duplication