@@ -6,6 +6,7 @@ MovieJukebox 1.0.17 beta
 ------------------------
   - Enhancement  #311 A playlist is now generated for all movies (even if there's only one file), and it is customizable via playlist.xsl
   - Enhancement  #411 Plugin for Dutch movie database (www.moviemeter.nl)
+  - Fixed defect #565 Filmaffinity id ignored
   - Fixed defect #636 (Regression) Check for file-based subtitles
   - Fixed defect #644 Directory fanart not found on POSIX systems
   - Fixed defect #645 IMDB plots with embedded HTML tags are now parsed correctly
